k8s/calico-system/networkpolicies.networking.k8s.io.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    creationTimestamp: "2025-08-27T01:42:38Z"
    generation: 1
    name: goldmane
    namespace: calico-system
    ownerReferences:
    - apiVersion: operator.tigera.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: Goldmane
      name: default
      uid: 6d657107-94ee-4c2e-a139-a6f20e5849cc
    resourceVersion: "1179"
    uid: 77566a31-f58a-4b02-81f3-33d083ad17ea
  spec:
    ingress:
    - ports:
      - port: 7443
        protocol: TCP
    podSelector:
      matchLabels:
        app.kubernetes.io/name: goldmane
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    creationTimestamp: "2025-08-27T01:42:38Z"
    generation: 1
    name: whisker
    namespace: calico-system
    ownerReferences:
    - apiVersion: operator.tigera.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: Whisker
      name: default
      uid: 77e363cc-dc5f-4d04-aa25-66621666306a
    resourceVersion: "1153"
    uid: 383f6f4e-ae63-45d7-8edd-14094c50f21b
  spec:
    egress:
    - ports:
      - port: 7443
        protocol: TCP
      to:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: goldmane
    - ports:
      - port: 53
        protocol: TCP
      - port: 53
        protocol: UDP
      to:
      - namespaceSelector:
          matchLabels:
            projectcalico.org/name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
    podSelector:
      matchLabels:
        app.kubernetes.io/name: whisker
    policyTypes:
    - Ingress
    - Egress
kind: List
metadata:
  resourceVersion: ""
